--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   json_serializable: ^6.9.0
   equatable: ^2.0.7
   google_sign_in: ^6.2.2
+  share_plus: ^10.1.4
+  path_provider: ^2.1.5
+  screenshot: ^3.0.0
 
 dev_dependencies:
   flutter_test:
