--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   share_plus: ^10.1.4
   path_provider: ^2.1.5
   screenshot: ^3.0.0
+  smooth_page_indicator: ^1.2.0+3
+  fl_chart: ^0.70.2
 
 dev_dependencies:
   flutter_test:
