--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   share_plus: ^10.1.4
   path_provider: ^2.1.5
   screenshot: ^3.0.0
-  smooth_page_indicator: ^1.2.0+3
+  smooth_page_indicator: ^1.2.1
   fl_chart: ^0.70.2
   pdf: ^3.11.3
   cross_file: ^0.3.4+2
