--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   pdf: ^3.11.3
   cross_file: ^0.3.4+2
   pdf_render: ^1.4.12
+  local_auth: ^2.3.0
   # google_maps_flutter: ^2.10.0
 
 dev_dependencies:
