--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -9,6 +9,7 @@ android {
     namespace = "com.laxmii.app"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
+    compileSdkVersion 35
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
@@ -24,8 +25,10 @@ android {
         applicationId = "com.laxmii.app"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
+        minSdk = 21
+        //flutter.minSdkVersion
+        targetSdk = 33
+        //flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
