--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   webview_flutter_wkwebview: ^3.18.4
   webview_flutter_android: ^4.3.4
   cached_network_image: ^3.4.1
+  syncfusion_flutter_charts: ^29.1.35
+  flutter_animate: ^4.5.2
+  url_launcher: ^6.3.1
+  image_picker: ^1.1.2
   # google_maps_flutter: ^2.10.0
 
 dev_dependencies:
