--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_animate: ^4.5.2
   url_launcher: ^6.3.1
   image_picker: ^1.1.2
+  pin_code_fields: ^8.0.1
   # google_maps_flutter: ^2.10.0
 
 dev_dependencies:
