--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   url_launcher: ^6.3.1
   image_picker: ^1.1.2
   pin_code_fields: ^8.0.1
+  dotted_border: ^2.1.0
   # google_maps_flutter: ^2.10.0
 
 dev_dependencies:
