--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,6 @@ dependencies:
   flutter_riverpod: ^2.6.1
   flutter_svg: ^2.0.16
   loading_animation_widget: ^1.3.0
-  # flutter_native_contact_picker: ^0.0.9
   pinput: ^5.0.0
   intl: ^0.20.1
   flutter_load_kit: ^0.0.2
@@ -35,7 +34,7 @@ dependencies:
   path_provider: ^2.1.5
   screenshot: ^3.0.0
   smooth_page_indicator: ^1.2.1
-  fl_chart: ^0.70.2
+  # fl_chart: ^0.70.2
   pdf: ^3.11.3
   cross_file: ^0.3.4+2
   pdf_render: ^1.4.12
