--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,6 +5,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.2.1'
+        classpath 'com.google.gms:google-services:4.3.15'
+
+        
     }
 }
 
