--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   image_picker: ^1.1.2
   pin_code_fields: ^8.0.1
   dotted_border: ^2.1.0
+  firebase_auth: ^5.5.3
+  firebase_core: ^3.13.0
   # google_maps_flutter: ^2.10.0
 
 dev_dependencies:
