--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -35,19 +35,27 @@ android {
         minSdk = flutter.minSdkVersion
         minSdkVersion 23   
         //flutter.minSdkVersion
-        targetSdk = 33
+        targetSdk = 34
         //flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
 
+    // signingConfigs {
+    //     create("release") {
+    //         keyAlias = keystoreProperties["keyAlias"] as String
+    //         keyPassword = keystoreProperties["keyPassword"] as String
+    //      //   storeFile = keystoreProperties["storeFile"] ? file(keystoreProperties["storeFile"]) : null
+    //         storeFile = file(keystoreProperties["storeFile"] as String)
+    //         storePassword = keystoreProperties["storePassword"] as String
+    //     }
+    // }
     signingConfigs {
-        create("release") {
-            keyAlias = keystoreProperties["keyAlias"] as String
-            keyPassword = keystoreProperties["keyPassword"] as String
-         //   storeFile = keystoreProperties["storeFile"] ? file(keystoreProperties["storeFile"]) : null
-            storeFile = file(keystoreProperties["storeFile"] as String)
-            storePassword = keystoreProperties["storePassword"] as String
+        release {
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile file(keystoreProperties['storeFile'])
+            storePassword keystoreProperties['storePassword']
         }
     }
 
@@ -55,7 +63,11 @@ android {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig = signingConfigs.debug
+          //  signingConfig = signingConfigs.debug
+           // signingConfig signingConfigs.release
+            signingConfig signingConfigs.release
+            minifyEnabled false
+            shrinkResources false
         }
     }
 }
