--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   dotted_border: ^2.1.0
   firebase_auth: ^5.5.3
   firebase_core: ^3.13.0
+  syncfusion_flutter_pdfviewer: ^29.1.38
   # google_maps_flutter: ^2.10.0
 
 dev_dependencies:
