--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   firebase_auth: ^5.5.3
   firebase_core: ^3.13.0
   syncfusion_flutter_pdfviewer: ^29.1.38
+  sign_in_with_apple: ^7.0.1
+  local_auth_android: ^1.0.49
+  local_auth_darwin: ^1.4.3
   # google_maps_flutter: ^2.10.0
 
 dev_dependencies:
