--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -35,7 +35,8 @@ android {
         minSdk = flutter.minSdkVersion
         minSdkVersion 23   
         //flutter.minSdkVersion
-        targetSdk = 34
+        targetSdkVersion 35
+        targetSdk = 35
         //flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
