--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -17,6 +17,7 @@ android {
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
     compileSdkVersion 35
+    compileSdk = 36
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
@@ -33,7 +34,7 @@ android {
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = flutter.minSdkVersion
-        minSdkVersion 23   
+        minSdkVersion flutter.minSdkVersion   
         //flutter.minSdkVersion
         targetSdkVersion 35
         targetSdk = 35
